# tweetly_app

./: .env.template  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
tweetly_app/: db_schema.sql  manage.py
tweetly_app/core/: urls.py  views.py
tweetly_app/core/business_logic/: exceptions.py
tweetly_app/core/business_logic/dto/: __init__.py  login.py  tag.py  (+3 more)
tweetly_app/core/migrations/: 0001_initial.py  0002_populare_default_country.py  0002_populate_default_country.py  0003_remove_customuser_nickname_alter_customuser_avatar.py  0003_tweet_tags.py  0004_remove_tweet_tags_delete_tweetretweet.py  0005_remove_comment_tweet_remove_comment_user_and_more.py  0006_remove_tweetlike_like_tweetlike_user_and_more.py  0007_tweet_retweets.py  0008_comment_user.py  0009_remove_notification_is_real.py
tweetly_app/core/models/: __init__.py  comment.py  country.py  customuser.py  emailcode.py  follower.py  like.py  notification.py  retweet.py  tag.py  tweet.py  tweet_comment.py  tweet_like.py  tweet_retweet.py  tweet_tag.py  user_notification.py
tweetly_app/core/presentation/: paginator.py
tweetly_app/core/validators/: __init__.py  file_extention.py  max_size.py  swear_word.py  validate_age.py
tweetly_app/static/css/: add_tweet.css  edit_profile.css  follow.css  index.css  login_singup.css  main.css  notifications.css  profile.css  tag.css  tweet.css  tweet_by_tag.css
tweetly_app/templates/: base.html  index.html  notifications.html  trending.html
tweetly_app/tweetly_app/: asgi.py  logger_formater.py  settings.py  urls.py  wsgi.py
(+52 files in other folders)
